// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab tests props active 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1px 3px 0 3px;
  margin-right: 16px;
  cursor: pointer;
  font-size: 18px;
  font-weight: 400;
  line-height: 40px;
  color: #6a6a6a;
  border-bottom: 2px solid transparent;
}

<div
  className="c0"
/>
`;

exports[`with props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1px 3px 0 3px;
  margin-right: 16px;
  cursor: pointer;
  font-size: 18px;
  font-weight: 400;
  line-height: 40px;
  color: #116E9C;
  border-bottom: 2px solid #116E9C;
}

<div
  class="c0"
/>
`;
